[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"], default = false }
borsh = "0.10.3"
bytemuck = "1.14.0"
solana-program = "1.16"
phoenix-common = { version = "0.2.1", features = ["cpi"] }
lib-sokoban = "=0.3.0"
heapless = "0.8.0"
phoenix-seat-manager-common = { version = "0.1.1", features = ["cpi"] }
anyhow = "1"
solana-client = "^1.18"
solana-sdk = "^1.18"
spl-associated-token-account = "2.3.0"
tokio = "1.40.0"
urlencoding = "2.1.3"
base64 = "0.22.0"